tests/paczka1/fuzzy1/57877821.err
Error in line 4: rrfL4fihF0 S139 -4,0
Error in line 1: rrfL4fihF0 S139 67,4
Error in line 19: S139 A357 15,4
Error in line 18: 1Fvq0DgU7 A357 48,9
Error in line 29: rrfL4fihF0 S139 90,3
